--- a/Booker/app/views/books/edit.html.erb
+++ b/Booker/app/views/books/edit.html.erb
@@ -21,3 +21,4 @@
 	</div>
 	<%= f.submit 'Update Book' %>
 <% end %>
+<%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", books_path %>
