--- a/Booker/app/views/books/show.html.erb
+++ b/Booker/app/views/books/show.html.erb
@@ -1,9 +1,11 @@
 <% if flash[:notice] %>
-<%= flash[:notice] %>
+	<div class="flash">
+		<%= flash[:notice] %>
+	</div>
 <% end %>
 
 <p><strong>Title:</strong><%= @book.title %></p>
 
 <p><strong>Body:</strong><%= @book.body %></p>
 
-<%= link_to "edit", edit_book_path(@book.id) %> | <%= link_to "Back", books_path %>
+<%= link_to "Edit", edit_book_path(@book.id) %> | <%= link_to "Back", books_path %>
