--- a/meshiterro/app/views/users/show.html.erb
+++ b/meshiterro/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class="profile-container">
   <h3 class="profile-name"><%= @user.name %></h3>
-  <%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+  <%= attachment_image_tag @user :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+  <% if @user.id == current_user.id %>
+    <p><%= link_to "プロフィール編集", edit_user_path(@user), class: "pull-right" %></p>
+  <% end %>
 </div>
 <section class="sct-color-1 slice">
   <div class="container-fluid masonry-container">
@@ -18,7 +21,7 @@
                   </div>
                 </div>
                 <div class="block-content">
-                  <%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb") %>
+                  <%= attachment_image_tag post_image.user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
                   <h3 class="block-title">
                     <%= link_to post_image_path(post_image.id) do %>
                       <i class="fa fa-map-marker"></i><%= post_image.shop_name %>
