--- a/meshiterro/app/views/post_images/show.html.erb
+++ b/meshiterro/app/views/post_images/show.html.erb
@@ -60,7 +60,7 @@
       <div class="comment-body bb">
         <div class="comment-avatar">
           <div class="avatar">
-            <%= image_tag('sample-author1.jpg', style: "width: 60px; height: 60px;") %>
+            <%= attachment_image_tag post_comment.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
           </div>
         </div>
         <div class="comment-text">
