--- a/meshiterro/app/views/users/show.html.erb
+++ b/meshiterro/app/views/users/show.html.erb
@@ -1,48 +1,9 @@
 <div class="profile-container">
   <h3 class="profile-name"><%= @user.name %></h3>
-  <%= attachment_image_tag @user :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
   <% if @user.id == current_user.id %>
     <p><%= link_to "プロフィール編集", edit_user_path(@user), class: "pull-right" %></p>
   <% end %>
 </div>
-<section class="sct-color-1 slice">
-  <div class="container-fluid masonry-container">
-    <div class="row">
-      <div class="col-md-8 col-sm-offset-2">
-        <div class="masonry-wrapper-cols">
-          <% @post_images.each do |post_image| %>
-            <div class="masonry-block">
-              <div class="block block-image v1">
-                <div class="block-image">
-                  <div class="view view-first">
-                    <%= link_to post_image_path(post_image.id) do %>
-                      <%= attachment_image_tag post_image, :image %>
-                    <% end %>
-                  </div>
-                </div>
-                <div class="block-content">
-                  <%= attachment_image_tag post_image.user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
-                  <h3 class="block-title">
-                    <%= link_to post_image_path(post_image.id) do %>
-                      <i class="fa fa-map-marker"></i><%= post_image.shop_name %>
-                    <% end %>
-                  </h3>
-                  <p><%= post_image.caption %></p>
-                  <ul class="inline-meta">
-                    <li>By
-                      <%= post_image.user.name %>
-                    </li>
-                    <li>
-                      <%= link_to "#{post_image.post_comments.count}コメント", post_image_path(post_image.id) %>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          <% end %>
-          <%= paginate @post_images %>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
+<%= render 'post_images/list', post_images: @post_images %>
