--- a/Booker/app/views/books/top.html.erb
+++ b/Booker/app/views/books/top.html.erb
@@ -1,6 +1,22 @@
-<h1>ようこそ Bookers へ！</h1>
-<p>Bookers では、さまざまな書籍に関するあなたの意見や</p>
+<div class="body">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-offset-3 col-md-6">
+				<h1>welcome to <span class="glyphicon glyphicon-book"><strong>Bookers</strong> !!</span></h1>
+				<p>In <span class="glyphicon glyphicon-book"><strong>Bookers</strong>,</span></p>
 
-<p>印象を共有し交換することができます</p>
+				<p>you can share and exchange your opinions , inpressions , and emotions</p>
 
-<p><%= link_to 'start', books_path %></p>
+				<p>about various books!</p>
+				<div class="btn-wrapper">
+					<div class="row">
+						<%= link_to "Log in",  new_user_session_path, class:"col-xs-10 col-xs-offset-1 btn btn-info" %>
+					</div>
+					<div class="row">
+						<%= link_to "Sign Up", new_user_registration_path, class:"col-xs-10 col-xs-offset-1 btn btn-success" %>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
