--- a/Booker/app/views/layouts/application.html.erb
+++ b/Booker/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
         <nav>
           <ul class="nav navbar-right">
             <% if user_signed_in? %>
-              <li><%= link_to "Home", "#" %></li>
-              <li><%= link_to "Users", "#" %></li>
-              <li><%= link_to "Books", "#" %></li>
-              <li><%= link_to "logout", destroy_user_session_path, method: :delete %></li>
+              <li><%= link_to "Home", user_path(current_user.id), class:"glyphicon glyphicon-home" %></li>
+              <li><%= link_to "Users", users_path, class:"glyphicon glyphicon-user" %></li>
+              <li><%= link_to "Books", books_path, class:"glyphicon glyphicon-book" %></li>
+              <li><%= link_to "logout", destroy_user_session_path, method: :delete, class:"glyphicon glyphicon-log-out" %></li>
             <% else %>
               <li><%= link_to " Home", root_path, class:"glyphicon glyphicon-home" %></li>
               <li><%= link_to " About", "/home/about", class:"glyphicon glyphicon-link" %></li>
