--- a/Booker/app/views/users/show.html.erb
+++ b/Booker/app/views/users/show.html.erb
@@ -1,2 +1,67 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="body">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-3">
+				<h2>User info</h2>
+				<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+				<table class="table">
+					<tr class="userinfo">
+						<th>name</th>
+						<th><%= @user.name %></th>
+					</tr>
+					<tr class="userinfo">
+						<th>introduction</th>
+						<th><%= @user.introduction %></th>
+					</tr>
+				</table>
+				<% if @user.id == current_user.id %>
+				<div class="row">
+					<%= link_to "",edit_user_registration_path, class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+				</div>
+				<% end %>
+				<h2>New book</h2>
+				<%= form_for (@book) do |f| %>
+				<div class="field row">
+					<label>Title</label>
+					<%= f.text_field :title, class:"col-xs-12" %>
+				</div>
+    			<div class="field row">
+					<label>Opinion</label>
+					<%= f.text_area :body, class:"col-xs-12" %>
+				</div>
+				<div class="row">
+				<%= f.submit 'Create Book', class:"btn btn-primary col-xs-12" %>
+				</div>
+				<% end %>
+			</div>
+			<div class="col-xs-9">
+				<h2>Books</h2>
+				<table class="table table-hover table-inverse">
+					<thead>
+						<tr>
+							<th></th>
+							<th>Title</th>
+							<th>Opinion</th>
+							<th colspan="3"></th>
+						</tr>
+					</thead>
+					<tbody>
+						<% @books.each do |book| %>
+						<tr>
+							<td>
+								<%= link_to user_path(book.user.id) do %>
+								<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "45x45", fallback: "no_image.jpg" %>
+								<% end %>
+							</td>
+							<td><%= link_to "#{book.title}", book_path(book) %></td>
+							<td><%= book.body %></td>
+							<th colspan="3"></th>
+						</tr>
+						<% end %>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+	
+</div>
