--- a/Booker/app/views/users/show.html.erb
+++ b/Booker/app/views/users/show.html.erb
@@ -1,9 +1,17 @@
 <div class="body">
+	<% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+ 	<% end %>
+ 	<% if flash[:notice] %>
+ 	<div>
+ 		<%= flash[:notice] %>
+ 	</div>
+ 	<% end %>
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-3">
 				<h2>User info</h2>
-				<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+				<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100", fallback: "no_image.jpg" %>
 				<table class="table">
 					<tr class="userinfo">
 						<th>name</th>
@@ -16,7 +24,7 @@
 				</table>
 				<% if @user.id == current_user.id %>
 				<div class="row">
-					<%= link_to "",edit_user_registration_path, class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+					<%= link_to "", edit_user_path(@user), class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
 				</div>
 				<% end %>
 				<h2>New book</h2>
@@ -55,7 +63,7 @@
 							</td>
 							<td><%= link_to "#{book.title}", book_path(book) %></td>
 							<td><%= book.body %></td>
-							<th colspan="3"></th>
+							<td colspan="3"></td>
 						</tr>
 						<% end %>
 					</tbody>
@@ -63,5 +71,4 @@
 			</div>
 		</div>
 	</div>
-	
 </div>
