--- a/Booker/app/assets/stylesheets/application.scss
+++ b/Booker/app/assets/stylesheets/application.scss
@@ -40,27 +40,15 @@ header {
  .body {
  margin-top: 51px;
  }
-#error_explanation {
-	width: 450px;
-	border: 2px solid red;
-	padding: 7px;
-	padding-bottom: 0;
-	margin-bottom: 20px;
-	background-color: #f0f0f0;
-}
-#error_explanation h2 {
-	text-align: left;
-	font-weight: bold;
-	padding: 5px 5px 5px 15px;
-	font-size: 12px;
-	margin: -7px;
-	margin-bottom: 0;
-	background-color: #c00;
-	color: #fff;
-}
 label {
-	display: block;
-}
+	display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: bold;
+    }
+#error_explanation {
+	color: red;
+	}
 th {
 	text-align: left;
 }
