--- a/Booker/app/views/books/index.html.erb
+++ b/Booker/app/views/books/index.html.erb
@@ -1,37 +1,76 @@
-<h1>Books</h1>
-<table>
-	<thead>
-		<tr>
-			<th>Title</th>
-			<th>Body</th>
-			<th></th>
-			<th></th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @books.each do |book| %>
-		  <tr>
-			<td><%= book.title %></td>
-			<td><%= book.body %></td>
-			<td><%= link_to "Show", book_path(book.id) %></td>
-			<td><%= link_to "Edit", edit_book_path(book.id) %></td>
-			<td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
-		  </tr>
-		<% end %>
-	</tbody>
-</table>
-
-
-<h2>New book</h2>
-<% if @book.errors.any? %>
+<div class="body">
+	<% if @book.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
-      <ul>
-        <% @book.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-          <% end %>
-      </ul>
-
+      	<h3><%= pluralize(@book.errors.count, "error") %> prohibited this obj from being saved:</h3>
+      	<ul>
+       		<% @book.errors.full_messages.each do |message| %>
+        	<li><%= message %></li>
+        	<% end %>
+      	</ul>
     </div>
-<% end %>
+	<% end %>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-3">
+				<h2>User info</h2>
+				<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100", fallback: "no_image.jpg" %>
+				<table class="table">
+					<tr class="userinfo">
+						<th>name</th>
+						<th><%= @user.name %></th>
+					</tr>
+					<tr class="userinfo">
+						<th>introduction</th>
+						<th><%= @user.introduction %></th>
+					</tr>
+				</table>
+				<% if @user.id == current_user.id %>
+				<div class="row">
+					<%= link_to "",edit_user_path(@user), class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+				</div>
+				<% end %>
+				<h2>New book</h2>
+				<%= form_for (@book) do |f| %>
+				<div class="field row">
+					<label>Title</label>
+					<%= f.text_field :title, class:"col-xs-12" %>
+				</div>
+    			<div class="field row">
+					<label>Opinion</label>
+					<%= f.text_area :body, class:"col-xs-12" %>
+				</div>
+				<div class="row">
+				<%= f.submit 'Create Book', class:"btn btn-primary col-xs-12" %>
+				</div>
+				<% end %>
+			</div>
+			<div class="col-xs-9">
+				<h2>Books</h2>
+				<table class="table table-hover table-inverse">
+					<thead>
+						<tr>
+							<th></th>
+							<th>Title</th>
+							<th>Opinion</th>
+							<th colspan="3"></th>
+						</tr>
+					</thead>
+					<tbody>
+						<% @books.each do |book| %>
+						<tr>
+							<td>
+								<%= link_to user_path(book.user) do %>
+								<%= attachment_image_tag book.user, :profile_image, format: 'jpeg', size: "45x45", fallback: "no_image.jpg" %>
+								<% end %>
+							</td>
+							<td><%= link_to "#{book.title}", book_path(book) %></td>
+							<td><%= book.body %></td>
+							<td colspan="3"></td>
+						</tr>
+						<% end %>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
