--- a/Booker/app/views/books/show.html.erb
+++ b/Booker/app/views/books/show.html.erb
@@ -1,11 +1,64 @@
-<% if flash[:notice] %>
-	<div class="flash">
-		<%= flash[:notice] %>
+<div class="body">
+	<% if flash[:notice] %>
+	<%= flash[:notice] %>
+	<% end %>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-3">
+				<h2>User info</h2>
+				<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100", fallback: "no_image.jpg" %>
+				<table class="table">
+					<tr class="userinfo">
+						<th>name</th>
+						<th><%= @user.name %></th>
+					</tr>
+					<tr class="userinfo">
+						<th>introduction</th>
+						<th><%= @user.introduction %></th>
+					</tr>
+				</table>
+				<% if @user.id == current_user.id %>
+				<div class="row">
+					<%= link_to "", edit_user_path(@user), class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+				</div>
+				<% end %>
+				<h2>New book</h2>
+				<%= form_for (@book) do |f| %>
+				<div class="field row">
+					<label>Title</label>
+					<%= f.text_field :title, class:"col-xs-12" %>
+				</div>
+    			<div class="field row">
+					<label>Opinion</label>
+					<%= f.text_area :body, class:"col-xs-12" %>
+				</div>
+				<div class="row">
+				<%= f.submit 'Create Book', class:"btn btn-primary col-xs-12" %>
+				</div>
+				<% end %>
+			</div>
+			<div class="col-xs-9">
+				<h2>Book detail</h2>
+				<table class="table table-hover table-inverse">
+					<tbody>
+						<tr>
+							<td>
+								<%= link_to user_path(@book2.user) do %>
+								<%= attachment_image_tag @book2.user, :profile_image, format: 'jpeg', size: "45x45", fallback: "no_image.jpg" %>
+								<br>
+								<%= @book2.user.name %>
+								<% end %>
+							</td>
+							<td><%= link_to "#{@book2.title}", book_path(@book2) %></td>
+							<td><%= @book2.body %></td>
+							<% if @book2.user == current_user %>
+							<td><%= link_to "Edit", edit_book_path(@book2), class:"btn btn-success" %></td>
+							<td><%= link_to "Destroy", book_path(@book2), method: :delete, class:"btn btn-danger", "data-confirm" => "Are you sure?" %></td>
+							<% end %>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 	</div>
-<% end %>
-
-<p><strong>Title:</strong><%= @book.title %></p>
-
-<p><strong>Body:</strong><%= @book.body %></p>
-
-<%= link_to "Edit", edit_book_path(@book.id) %> | <%= link_to "Back", books_path %>
+</div>
