--- a/Booker/app/views/home/top.html.erb
+++ b/Booker/app/views/home/top.html.erb
@@ -1,7 +1,9 @@
 <div class="body">
-	<% flash.each do |key, value| %>
-    <%= content_tag(:div, value, class: "#{key}") %>
-  	<% end %>
+ 	<% if flash[:notice] %>
+ 	<div>
+ 		<%= flash[:notice] %>
+ 	</div>
+ 	<% end %>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-3 col-md-6">
