--- a/Booker/app/views/users/index.html.erb
+++ b/Booker/app/views/users/index.html.erb
@@ -1,39 +1,6 @@
 <div class="body">
 	<div class="container">
-		<div class="row">
-			<div class="col-xs-3">
-				<h2>User info</h2>
-				<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100", fallback: "no_image.jpg" %>
-				<table class="table">
-					<tr class="userinfo">
-						<th>name</th>
-						<th><%= @user.name %></th>
-					</tr>
-					<tr class="userinfo">
-						<th>introduction</th>
-						<th><%= @user.introduction %></th>
-					</tr>
-				</table>
-				<% if @user.id == current_user.id %>
-				<div class="row">
-					<%= link_to "",edit_user_path(@user), class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
-				</div>
-				<% end %>
-				<h2>New book</h2>
-				<%= form_for (@book) do |f| %>
-				<div class="field row">
-					<label>Title</label>
-					<%= f.text_field :title, class:"col-xs-12" %>
-				</div>
-    			<div class="field row">
-					<label>Opinion</label>
-					<%= f.text_area :body, class:"col-xs-12" %>
-				</div>
-				<div class="row">
-				<%= f.submit 'Create Book', class:"btn btn-primary col-xs-12" %>
-				</div>
-				<% end %>
-			</div>
+		<%= render 'users/info', user: @user, book: @book %>
 			<div class="col-xs-9">
 				<h2>Users</h2>
 				<table class="table table-hover table-inverse">
