--- a/Booker/app/views/home/top.html.erb
+++ b/Booker/app/views/home/top.html.erb
@@ -16,19 +16,20 @@
 				<div class="btn-wrapper">
 					<% if current_user %>
 					<div class="row">
-						<%= link_to "Log in",  user_path(current_user), class:"col-xs-10 col-xs-offset-1 btn btn-info" %>
+						<%= link_to "Log in", user_path(current_user), class:"col-xs-10 col-xs-offset-1 btn btn-info" %>
 					</div>
 					<div class="row">
 						<%= link_to "Sign Up", user_path(current_user), class:"col-xs-10 col-xs-offset-1 btn btn-success" %>
 					</div>
 					<% else %>
 					<div class="row">
-						<%= link_to "Log in",  new_user_session_path, class:"col-xs-10 col-xs-offset-1 btn btn-info" %>
+						<%= link_to "Log in", new_user_session_path, class:"col-xs-10 col-xs-offset-1 btn btn-info" %>
 					</div>
 					<div class="row">
 						<%= link_to "Sign Up", new_user_registration_path, class:"col-xs-10 col-xs-offset-1 btn btn-success" %>
 					</div>
 					<% end %>
+					<h1 class="jquery">Hello jQuery!</h1>
 				</div>
 			</div>
 		</div>
