--- a/meshiterro_re/app/views/devise/registrations/new.html.erb
+++ b/meshiterro_re/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,42 @@
-<h2>Sign up</h2>
+<section class="slice slice-lg sct-color-1">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+                <div class="form-user style-1 rounded has-shadow-1">
+                    <div class="form-header text-center">
+                        <h2 class="form-header-title">ユーザー登録</h2>
+                    </div>
+                    <div class="form-body">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+                      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="form-group has-icon">
+        <label class="control-label sr-only" for="inputName">Name</label>
+        <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputName", placeholder:"名前"%>
+        <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
+    </div>
+    <div class="form-group has-icon">
+        <label class="control-label sr-only" for="inputEmail">Email</label>
+        <%= f.email_field :email, class:"form-control", id:"inputEmail", placeholder:"メールアドレス"%>
+        <span class="fa fa-envelope form-control-icon" aria-hidden="true"></span>
+    </div>
+    <div class="form-group has-icon">
+        <label class="control-label sr-only" for="inputPassword">Password</label>
+        <%= f.password_field :password, autocomplete: "off", class:"form-control", id:"inputPassword", placeholder:"パスワード" %>
+        <span class="fa fa-lock form-control-icon" aria-hidden="true"></span>
+    </div>
+    <div class="form-group has-icon">
+        <label class="control-label sr-only" for="inputConfirmPassword">Password</label>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", id:"inputConfirmPassword", placeholder:"パスワード確認" %>
+         <span class="fa fa-check-circle-o form-control-icon" aria-hidden="true"></span>
+    </div>
+        <%= f.submit "新規登録", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
