--- a/meshiterro_re/app/views/layouts/application.html.erb
+++ b/meshiterro_re/app/views/layouts/application.html.erb
@@ -10,6 +10,28 @@
   </head>
 
   <body>
+    <div id="slidemenu">
+  <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
+    <% if user_signed_in? %>
+      <li class="">
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      </li>
+      <li class="">
+        <%= link_to '投稿フォーム', new_post_image_path %>
+      </li>
+      <li class="">
+        <%= link_to 'マイページ', "#" %>
+      </li>
+    <% else %>
+      <li class="">
+        <%= link_to "新規登録", new_user_registration_path %>
+      </li>
+      <li class="">
+        <%= link_to "ログイン", new_user_session_path %>
+      </li>
+    <% end %>
+  </ul>
+</div>
     <%= yield %>
   </body>
 </html>
