--- a/meshiterro_re/app/views/post_images/show.html.erb
+++ b/meshiterro_re/app/views/post_images/show.html.erb
@@ -20,8 +20,21 @@
           <i class="fa fa-calendar"></i><%= @post_image.created_at.strftime('%Y/%m/%d') %>
         </li>
         <li>
-          <i class="fa fa-heart"></i>
-          <a href="#">202 いいね</a>
+          <% if @post_image.favorited_by?(current_user) %>
+<li>
+  <%= link_to post_image_favorites_path(@post_image), method: :delete do %>
+    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+    <%= @post_image.favorites.count %> いいね
+  <% end %>
+</li>
+<% else %>
+<li>
+  <%= link_to post_image_favorites_path(@post_image), method: :post do %>
+    <i class="fa fa-heart-o" aria-hidden="true"></i>
+    <%= @post_image.favorites.count %> いいね
+  <% end %>
+</li>
+<% end %>
         </li>
         <li>
           <i class="fa fa-comment"></i>
@@ -68,14 +81,14 @@
               <span>コメント</span>
             </h3>
           </div>
-          <form class="mt-20">
-            <div class="row">
-              <div class="col-sm-12">
-                <textarea class="form-control" rows="5" placeholder="コメントをここに"></textarea>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-lg btn-base-1 mt-20 pull-right">送信する</button>
-          </form>
+          <%= form_for [@post_image, @post_comment] do |f| %>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+    </div>
+  </div>
+  <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+<% end %>s
 
         </div>
       </div>
